# the-haskell-school-of-expression

./: README.md
ch4/: haskell.cabal
ch4/src/: Draw.hs
ch5/: haskell.cabal
ch5/src/: Main.hs
ch8/src/: Draw.hs  Main.hs  Perimeter.hs  Region.hs  Shape.hs
